# bennugd-monolithic

./: AndroidJoyButtons.md  AndroidKeys.md  CMakeLists.txt  PSPGettingStarted.md  PSPHomebrewEnabler.md  ProjectHome.md  Status.md  WiiCompiling.md  WiiCreatingHomebrewChannelEntry.md  WiiGettingStarted.md  WinSettingUpPackager.md  build-devkitGP2X.sh  build-psp.sh  build-wii.sh  joystick_patch_v2  main.c  transcode_music.sh
.hg/: dirstate  undo.desc  undo.dirstate
.hg/cache/: branchheads  tags
.hg/store/: 00changelog.i  fncache
CMake/: BuildMenu.cmake
DCelso/: build-devkitGP2X.sh  build-psp.sh
DCelso/monolithic/: Makefile.linux  glob_sim.c
PSP/bennugd-monolithic-dev/: transcode_music.bat
PSP/examples/: 05_mod_time.dcb  06_mod_file.dcb  06_mod_file_2.dcb  26_mod_m7.dcb  (+17 more)
android/: AndroidManifest.xml  local.properties
controlpoints/: main.py  pointsetter.py  ui_mainwindow.py  ui_mainwindow.ui
core/: CMakeLists.txt  Makefile  clean
core/bgdc/: Makefile  Makefile.linux
core/bgdc/include/: bgdc.h  messages.h
core/bgdc/src/: c_code.c  c_main.c  main.c  main_core.c
core/bgdi/: Makefile  Makefile.OSX  Makefile.SDL12.linux  Makefile.iOS  Makefile.iOSSimulator  Makefile.linux  Makefile.psp
core/bgdi/nb_bgdi/nbproject/: Makefile-Default.mk  project.xml
core/bgdi/nb_bgdi/nbproject/private/: configurations.xml
core/bgdi/src/: main.c  psp.c  psp.h
core/bgdrtm/: Makefile  Makefile.OSX  Makefile.SDL12.linux  Makefile.iOS  Makefile.linux
core/bgdrtm/include/: bgdrtm.h
core/bgdrtm/src/: ._sysprocs.c  dcbr.c  dirs.c  instance.c  interpreter.c  misc.c  sysprocs.c
core/common/: b_crypt.c  files.c
core/common/wii/: platform.c  platform.h
core/include/: arrange.h  b_crypt.h  bgddl.h  commons_defs.h  dirs.h  files.h  files_st.h  loadlib.h  monolithic_includes.h  pslang.h  typedef.h
examples/: 01_core.prg  07_mod_sound.prg  08_mod_joy.prg  17_mod_mouse.prg  19_mod_text.prg  21_mod_regex.dcb  25_mod_wpad_2.prg  27_mod_iconv.prg  27_mod_sys.prg  28_mod_iconv.prg  31_mod_sqlite3.prg  demo_builtin_vars.prg  make_dcbs.bat
include/: SDL.h  SDL_config_iphoneos.h  SDL_config_macosx.h  SDL_config_minimal.h  SDL_config_nintendods.h  SDL_config_windows.h
libglob-bsd/: Makefile
monolithic/: Makefile.linux  Makefile.psp_bgdc  Makefile.wii_bgdi  bgdc_redefined.h  diet-fnmatch.c  diet-glob.c  dietfeatures.h  glob_sim.h  sim_loadlib.c  sim_loadlib.h
packager/: COPYING  dialog_preferences.py  main.py  pack_packager.bat  pack_packager.sh  packager.bat  packager.py  preferences.py  ui_mainwindow.py  ui_mainwindow.ui  ui_preferences.py  ui_preferences.ui
trunk/: CMakeLists.txt  Toolchain-PSPSDK.cmake  devkitGP2X-vars.sh  devkitPSP-vars.sh  transcode_music.bat  transcode_music.sh
wiki/: AndroidJoyButtons.wiki  AndroidKeys.wiki  OSXSettingUpPackager.wiki  PSPGettingStarted.wiki  PSPHomebrewEnabler.wiki  Status.wiki  WiiCompiling.wiki  WiiCreatingHomebrewChannelEntry.wiki  WiiGettingStarted.wiki  WinSettingUpPackager.wiki
(+1362 files in other folders)
